--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>Wisegrove Venture</title>
+    <title>Wisegrove Ventures</title>
   </head>
   <body>
 
@@ -23,7 +23,7 @@
 
     <div class="container" style="max-width:800px;">
       <div class="page-header">
-        <h1>Wisegrove Venture</h1>
+        <h1>Wisegrove Ventures</h1>
       </div>
       <p class="lead">Please use the following email address to contact us: <a href="mailto:info@wisegrove.com">info@wisegrove.com</a></p>
     </div>
