--- a/index.html
+++ b/index.html
@@ -28,5 +28,15 @@
       <p class="lead">Please use the following email address to contact us: <a href="mailto:info@wisegrove.com">info@wisegrove.com</a></p>
     </div>
 
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-4812942-18', 'auto');
+    ga('send', 'pageview');
+  </script>
+
   </body>
 </html>
