--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 
     <div class="container" style="max-width:800px;">
       <div class="page-header">
-        <h1>Wisegrove Venture</h1>
+        <h1>Wisegrove</h1>
       </div>
-      <p class="lead">Please use the following email address to contact us: <a href="mailto:info@wisegrove.com">info@wisegrove.com</a></p>
+      <p id="lead">Big data, analytics & automation</p>
+      <p>Please use the following email address to contact us: <a href="mailto:info@wisegrove.com">info@wisegrove.com</a></p>
     </div>
 
   <script>
