--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="page-header">
         <h1>Wisegrove</h1>
       </div>
-      <p id="lead">Big data, analytics & automation</p>
+      <p id="lead">Big data, analytics &amp; automation</p>
       <p>Please use the following email address to contact us: <a href="mailto:info@wisegrove.com">info@wisegrove.com</a></p>
     </div>
 
